--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -74,6 +74,8 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+      - name: Debug environment
+        run: echo "NEXT_PUBLIC_API_URL: $NEXT_PUBLIC_API_URL"
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
