--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Debug environment
-        run: echo "NEXT_PUBLIC_API_URL: $NEXT_PUBLIC_API_URL"
+        run: echo "NEXT_PUBLIC_API_URL $NEXT_PUBLIC_API_URL"
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
