--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "leaflet": "1.9.4",
+    "leaflet.markercluster": "1.5.3",
     "lucide-react": "0.545.0",
     "next": "15.5.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-leaflet": "5.0.0",
+    "react-leaflet-markercluster": "5.0.0-rc.0",
     "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
