--- a/src/config.json
+++ b/src/config.json
@@ -8,7 +8,7 @@
   "iconUrl": "https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon.png",
   "iconRetinaUrl": "https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon-2x.png",
   "shadowUrl": "https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png",
-  "pastEventClassName": "opacity-50",
+  "pastEventClassName": "opacity-50!",
   "iconClassNames": {
     "Assemblée de cuisine": "hue-rotate-0",
     "Déclaration : Solliciter l'appui des candidat-es": "hue-rotate-136",
